--- a/404.html
+++ b/404.html
@@ -4,114 +4,230 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Page Not Found - Budget App</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <style>
     /* Base styles */
+    
+:root {
+  /* ======== Light Mode Variables (from your snippet) ======== */
+  --bg-color: #ffffff;
+  --text-color: #333333;
+  --primary-color: #4caf50;
+  --hover-link-color: #43a047;
+  --secondary-bg: #f9f9f9;
+  --border-color: #ddd;
+  --link-color: #4caf50;
+  --modal-bg: #ffffff;
+  --card-bg: #f0f0f0;
+
+ 
+  --nav-bg: #ffffff;
+  --nav-text: #4caf50;
+  --shadow-color: rgba(0, 0, 0, 0.1);
+  --accent-color: #4caf50; /* always green */
+  --icon: #000;
+  --icon-hover: #191919;
+  --logout-button:#333;
+
+  /* Material Date Picker Variables */
+  --mdp-dialog-bg: #fff;
+  --mdp-header-bg: #1976d2;
+  --mdp-text-color: #000;
+  --mdp-border-color: #eee;
+  --mdp-hover-bg: #e0e0e0;
+  --mdp-action-hover-bg: #f1f1f1;
+
+  /* Modal-specific (for forms, etc.) */
+  --modal-bg-light: #ffffff;
+  --text-color-light: #333333;
+  --border-color-light: #cccccc;
+  --secondary-bg-light: #f9f9f9;
+
+  /* ======== Additional Light Mode Vars for overlay/popup ======== */
+  --overlay-bg: rgba(0, 0, 0, 0.4); /* dark backdrop behind popups */
+  --button-bg: #fafafa;
+  --button-border: #ccc;
+  --button-color: #999;
+  --item-bg: #f8f8f8;
+  --item-hover-bg: #eeeeee;
+  /* For “Expense” vs “Income” tab highlights */
+  --danger-color: #ff5252; /* expense highlight */
+  --income-color: #4caf50; /* income highlight */
+  --nav-hover-bg: #f0f0f0;
+  --nav-active-bg: #e0e0e0;
+  --nav-active-text: #000;
+}
+
+.dark-mode {
+  /* ======== Dark Mode Variables (from your snippet) ======== */
+  --bg-color: #121212;
+  --text-color: #e0e0e0;
+  --primary-color: #81c784;
+  --hover-link-color: #66bb6a;
+  --secondary-bg: #1e1e1e;
+  --border-color: #444;
+  --link-color: #81c784;
+  --modal-bg: #1e1e1e;
+  --card-bg: #1e1e1e;
+  --nav-bg: #1e1e1e;
+  --nav-text: #81c784;
+  --shadow-color: rgba(0, 0, 0, 0.6);
+  --accent-color: #4caf50; /* always green */
+  --icon: #e0e0e0;
+  --icon-hover: #fff;
+  --item-bg: #2a2a2a;
+  --item-hover-bg: #333333;
+  /* Material Date Picker Overrides */
+  --mdp-dialog-bg: #2c2c2c;
+  --mdp-header-bg: #1565c0;
+  --mdp-text-color: #e0e0e0;
+  --mdp-border-color: #555;
+  --mdp-hover-bg: #444;
+  --mdp-action-hover-bg: #333;
+
+  /* Modal-specific dark mode */
+  --modal-bg-dark: #2c2c2c;
+  --text-color-dark: #e0e0e0;
+  --border-color-dark: #555555;
+  --secondary-bg-dark: #3a3a3a;
+
+  /* ======== Additional Dark Mode Vars for overlay/popup ======== */
+  --overlay-bg: rgba(0, 0, 0, 0.6);
+  --button-bg: #3a3a3a;
+  --button-border: #666;
+  --button-color: #aaa;
+  --logout-button:#fff;
+
+  /* For “Expense” vs “Income” tab highlights */
+  --danger-color: #f44336;
+  --income-color: #81c784;
+  --nav-hover-bg: #282424;
+  --nav-active-bg: #1f1f1f;
+  --nav-active-text: #fff;
+}
+
+.auth-screen {
+  --bg: var(--bg-color);
+  --sheet-bg: #121212;
+  --sheet-radius: 26px 26px 0 0;
+  --headline: #ffffff;
+  --accent: var(--primary-color);
+  --btn-bg: var(--secondary-bg);
+  --btn-border: var(--border-color);
+  --btn-text: var(--text-color);
+  --btn-hover: var(--item-hover-bg);
+  --primary: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
     body {
       margin: 0;
       padding: 0;
       font-family: Inter, sans-serif;
-      background-color: #fff; /* Light mode background */
-      color: #666; /* Light mode text */
+      background: linear-gradient(135deg, var(--bg-color), var(--secondary-bg)); /* Light/dark mode gradient */
+      color: var(--text-color);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
       text-align: center;
-      transition: background-color 0.3s ease, color 0.3s ease;
+      overflow: hidden;
+      transition: background 0.3s ease, color 0.3s ease;
     }
 
-    /* Dark mode styles */
     .dark-mode body {
-      background-color: #1e1e1e; /* Dark mode background */
-      color: #b0b0b0; /* Dark mode text */
+      background: linear-gradient(135deg, var(--bg-color), var(--secondary-bg));
     }
 
-    /* Container for the 404 content */
+    /* Container with curved bottom */
     .container {
-      padding: 20px;
-      border-radius: 16px;
-      background-color: #f5f5f5; /* Light mode container background */
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      border-radius: 16px 16px 100px 16px;
+      background-color: var(--card-bg);
+      box-shadow: 0 6px 15px var(--shadow-color);
+      position: relative;
+      overflow: hidden;
       transition: background-color 0.3s ease;
     }
 
-    .dark-mode .container {
-      background-color: #2a2a2a; /* Dark mode container background */
-    }
-
-    /* 404 Heading */
+    /* 404 Heading with animation */
     h1 {
-      font-size: 6rem; /* Larger for emphasis */
-      font-weight: bold;
-      color: #4caf50; /* Green accent for light mode */
+      font-size: 6rem;
+      font-weight: 900;
+      color: var(--primary-color);
       margin: 0;
       animation: fadeIn 0.5s ease-in-out;
     }
 
-    .dark-mode h1 {
-      color: #66bb6a; /* Green accent for dark mode */
-    }
-
-    /* Error message */
+    /* Error message and tip */
     p {
       font-size: 1.2rem;
       margin: 1rem 0;
       animation: fadeIn 0.7s ease-in-out;
     }
 
-    /* Return to Home button */
+    .tip {
+      font-size: 1rem;
+      color: var(--text-color);
+      margin-top: 10px;
+    }
+
+    /* Return to Home and Explore buttons */
     a {
       display: inline-block;
-      padding: 10px 20px;
-      background-color: #4caf50; /* Green accent for light mode */
+      padding: 12px 24px;
+      background-color: var(--primary-color);
       color: #fff;
       text-decoration: none;
-      font-weight: 500;
+      font-weight: 600;
       border-radius: 8px;
       transition: background-color 0.3s ease, transform 0.2s ease;
+      margin: 0 10px;
       animation: fadeIn 0.9s ease-in-out;
     }
 
-    .dark-mode a {
-      background-color: #66bb6a; /* Green accent for dark mode */
-    }
-
     a:hover {
-      background-color: #43a047; /* Slightly darker green on hover (light mode) */
+      background-color: var(--hover-link-color);
       transform: scale(1.05);
     }
 
-    .dark-mode a:hover {
-      background-color: #5da962; /* Slightly darker green on hover (dark mode) */
-    }
-
-    /* Fade-in animation for elements */
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(10px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Optional: Add a subtle app name or logo placeholder */
-    .app-name {
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin-bottom: 20px;
-      color: #4caf50; /* Green accent for light mode */
+    /* Logo styling */
+    .top-logo {
+      position: absolute;
+      top: 1.5rem;
+      left: 1.5rem;
+      font-size: 1.8rem;
+      color: var(--primary-color);
+      z-index: 2;
       animation: fadeIn 0.3s ease-in-out;
     }
 
-    .dark-mode .app-name {
-      color: #66bb6a; /* Green accent for dark mode */
+    /* Animations */
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <div class="app-name">Budget App</div>
+  <div class="top-logo"><i class="fa-solid fa-rocket"></i></div>
   <div class="container">
     <h1>404</h1>
-    <p>Oops, the page you're looking for doesn't exist.</p>
+    <p>Oops, the page you’re looking for doesn’t exist.</p>
+    <p class="tip">Why not check your budget while you’re here?</p>
     <a href="index.html">Return to Home</a>
+    <a href="features.html">Explore Features</a>
   </div>
 </body>
 </html>
