--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="logo.png" type="image/png">
-  
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#4caf50" />
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./service-worker.js')
+          .then(() => console.log('✅ Cash Rocket Service Worker registered!'))
+          .catch(err => console.log('❌ Service Worker error:', err));
+      }
+    </script>
+    
     <!-- Icons and Chart.js -->
     <script src="https://kit.fontawesome.com/66e3b24af0.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
